2005-10-21  Jeroen Frijters  <jeroen@frijters.net>

	* gnu/testlet/java/lang/reflect/Proxy.java: Use proper class loader
	for the proxy, so that the serialization test succeeds.

2005-10-20  Anthony Balkissoon  <abalkiss@redhat.com>

	* gnu/testlet/javax/swing/DefaultListSelectionModel: New directory.
	* gnu/testlet/javax/swing/DefaultListSelectionModel/leadSelectionIndex.java: New test.

2005-10-19  David Gilbert  <david.gilbert@object-refinery.com>

	* gnu/testlet/javax/swing/plaf/metal/MetalLookAndFeel/getDefaults.java
	(test): an additional check for 'Button.margin'.

2005-10-18  David Gilbert  <david.gilbert@object-refinery.com>

	* gnu/testlet/javax/swing/plaf/basic/BasicComboBoxUI/createArrowButton.java: New test,
	* gnu/testlet/javax/swing/plaf/basic/BasicComboBoxUI/createEditor.java: New test,
	* gnu/testlet/javax/swing/plaf/basic/BasicComboBoxUI/createRenderer.java: New test,
	* gnu/testlet/javax/swing/plaf/basic/BasicComboBoxUI/general.java: New test,
	* gnu/testlet/javax/swing/plaf/basic/BasicComboBoxUI/getDefaultSize.java: New test,
	* gnu/testlet/javax/swing/plaf/basic/BasicComboBoxUI/getMaximumSize.java: New test,
	* gnu/testlet/javax/swing/plaf/basic/BasicComboBoxUI/getMinimumSize.java: New test,
	* gnu/testlet/javax/swing/plaf/basic/BasicComboBoxUI/getPreferredSize.java: New test,
	* gnu/testlet/javax/swing/plaf/basic/BasicComboBoxUI/MyBasicComboBoxUI.java: New support class,
	* gnu/testlet/javax/swing/plaf/basic/BasicComboBoxUI/MyBasicComboBoxUILAF.java: Likewise.

2005-10-18  David Gilbert  <david.gilbert@object-refinery.com>

	* gnu/testlet/javax/swing/JLabel/constructor.java
	(test): set MetalLookAndFeel and check default colors.

2005-10-18  David Gilbert  <david.gilbert@object-refinery.com>

	* gnu/testlet/javax/swing/JComboBox/MyJComboBox.java: New support class,
	* gnu/testlet/javax/swing/JComboBox/setModel.java: New test,
	* gnu/testlet/javax/swing/JComboBox/setSelectedIndex.java: New test.
